# stacktrace

./: .drone.star  .travis.yml  BOOST_STACKTRACE_DEFAULT_MAX_DEPTH.html  CMakeLists.txt  README.md  boost-stacktrace-features.jam  boost_stacktrace_header_reference.html  build.jam  index.html  standalone_HTML.manifest
.drone/: drone.sh
.github/workflows/: ci.yml
boost/stacktrace/: basic_stacktrace.html  const_iterator.html  frame.html  frame_view.html  iterator.html  stacktrace.html
boost/stacktrace/stacktrace/: frame.html
boost_stacktrace/: acknowledgements.html  build_macros_and_backends.html  getting_started.html
cmake/: boost_helpers.cmake
doc/: Jamfile.v2  stacktrace.qbk
example/: CMakeLists.txt  assert_handler.cpp  cpp_crashy_app.cpp  csharp_crashy_app.cs  csharp_crashy_window.xaml  csharp_crashy_window.xaml.cs  debug_function.cpp  getting_started.cpp  terminate_handler.cpp  throwing_st.cpp  trace_addresses.cpp  user_config.cpp  user_config.hpp
example/cpp_crashy_managed_dll/: CMakeLists.txt  cpp_crashy_managed_dll.cpp
include/boost/: stacktrace.hpp
include/boost/detail/winapi/: capture_stack.hpp  sym_from_addr.hpp
include/boost/stacktrace/: const_iterator.hpp  current_exception.hpp  exception_handler.hpp  frame.hpp  frame_view.hpp  safe_dump_to.hpp  stacktrace.hpp  stacktrace_fwd.hpp  this_thread.hpp
include/boost/stacktrace/detail/: addr2line_impls.hpp  addr_base.hpp  addr_base_msvc.hpp  backend.hpp  backend.ipp  backend_common.ipp  backend_libunwind.hpp  backend_linux.hpp  backend_msvc.hpp  backend_noop.hpp  backend_posix.hpp  backend_unwind.hpp  backend_windows.hpp  backtrace_holder_libunwind.hpp  backtrace_holder_linux.hpp  backtrace_holder_noop.hpp  backtrace_holder_win_dbghelp.hpp  backtrace_holder_windows.hpp  collect_msvc.ipp  collect_noop.ipp  collect_unwind.ipp  frame_decl.hpp  frame_msvc.ipp  frame_noop.ipp  frame_unwind.ipp  from_dump.ipp  helpers.hpp  libbacktrace_impls.hpp  libdwfl_impls.hpp  location_from_symbol.hpp  mgwhelp_impls.hpp  pop_options.h  push_options.h  safe_dump_noop.ipp  safe_dump_posix.ipp  safe_dump_win.ipp  stacktrace.ipp  stacktrace_helpers.hpp  stacktrace_libunwind.hpp  stacktrace_linux.hpp  (+8 more)
src/: CMakeLists.txt  addr2line.cpp  backtrace.cpp  basic.cpp  dwfl.cpp  exception_handler.cpp  exception_headers.h  from_exception.cpp  libunwind.cpp  noop.cpp  stacktrace.cpp  stacktrace_src.ipp  windbg.cpp  windbg_cached.cpp
src/minhook/: LICENSE.txt
src/minhook/include/: MinHook.h
src/minhook/src/: buffer.c  buffer.h  hook.c  trampoline.c  trampoline.h
src/minhook/src/hde/: hde32.c  hde32.h  hde64.c  hde64.h  pstdint.h  table32.h  table64.h
test/: CMakeLists.txt  Jamfile.v2  appveyor.yml  backtrace.dump  test.cpp  test_from_exception.cpp  test_from_exception_none.cpp  test_impl.cpp  test_impl.hpp  test_noop.cpp  test_num_conv.cpp  test_trivial.cpp  test_void_ptr_cast.cpp  thread_safety_checking.cpp  torture.cpp
test/cmake_install_test/: CMakeLists.txt  main.cpp
test/cmake_subdir_test/: CMakeLists.txt  main.cpp
